--- a/web_app/templates/layout.html
+++ b/web_app/templates/layout.html
@@ -16,6 +16,8 @@
           <ul>
             <li><a href="/books">Books Page</a></li>
             <li><a href="/books/new">New Book Form</a></li>
+            <li><a href="/tweets">Tweets Page</a></li>
+            <li><a href="/tweets/new">New Tweet Form</a></li>
           </ul>
         {% endblock %}
       </div>
