--- a/web_app/templates/layout.html
+++ b/web_app/templates/layout.html
@@ -18,6 +18,7 @@
             <li><a href="/books/new">New Book Form</a></li>
             <li><a href="/tweets">Tweets Page</a></li>
             <li><a href="/tweets/new">New Tweet Form</a></li>
+            <li><a href="/about">About Me</a></li>
           </ul>
         {% endblock %}
       </div>
